# agave_custom_syscall_example

./: README.md
agave/programs/bpf_loader/src/syscalls/: logging.rs  mod.rs
agave/svm/examples/json-rpc/server/src/: svm_bridge.rs
native-test-syscall/: package.json  pnpm-lock.yaml
native-test-syscall/program/: Cargo.toml
native-test-syscall/program/src/: instruction.rs  processor.rs
native-test-syscall/tests/: instruction.ts  test.ts
solana-sdk/: Cargo.toml
solana-sdk/clock/: Cargo.toml
solana-sdk/define-syscall/src/: definitions.rs
solana-sdk/epoch-rewards/: Cargo.toml
solana-sdk/program/: Cargo.toml
solana-sdk/program-entrypoint/: Cargo.toml
solana-sdk/program-entrypoint/src/: lib.rs
solana-sdk/program/src/: lib.rs  log.rs  sol_pub_unit8.rs
solana-sdk/program/src/syscalls/: definitions.rs
solana-sdk/pubkey/src/: lib.rs  syscalls.rs
solana-sdk/rent/: Cargo.toml
solana-sdk/slot-hashes/: Cargo.toml
solana-sdk/slot-history/: Cargo.toml
solana-sdk/sysvar/: Cargo.toml
solana-sdk/sysvar/src/: program_stubs.rs
stake/interface/: Cargo.toml
system/: Cargo.toml
system/interface/src/: error.rs
